# osureplay-player

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  output.txt
assets/: 4K.ini  skin.ini
include/: audio_parsers.h  defines.h  dict.h  display.h  frame_buffer.h  globals.h  replay_player.h  skin.h  slider_calcs.h  sound.h  utils.h  wav_parser.h
lib/concatf/sources/: my_putstr_stderr.c
lib/libav-12.3/: config.asm  config.fate  config.h  config.mak
lib/libav-12.3/libavcodec/: libavcodec-uninstalled.pc  libavcodec.pc
lib/libav-12.3/libavdevice/: libavdevice-uninstalled.pc  libavdevice.pc
lib/libav-12.3/libavfilter/: libavfilter-uninstalled.pc  libavfilter.pc
lib/libav-12.3/libavformat/: libavformat-uninstalled.pc  libavformat.pc
lib/libav-12.3/libavresample/: libavresample.pc
lib/libav-12.3/libavutil/: libavutil.pc
lib/libav-12.3/libswscale/: libswscale.pc
map1/: map.osu  replay.osr
map2/: map.osu  replay.osr
map3/: replay.osr
oldsrc/include/: replay_config.h  replay_player.h  slider_calcs.h
oldsrc/src/: decode_audio_file.c  dict.c  display_hit_object.c  frame_buffer.c  globals.c  load_skin.c  main.c  perfect_line.c
src/: Exceptions.hpp  LibAvRendererSound.cpp  LibAvRendererSound.hpp  OsuParticle.cpp  OsuParticle.hpp  OsuSkin.cpp  OsuSkin.hpp  ReplayPlayer.cpp  ReplayPlayer.hpp  Sound.cpp  Sound.hpp  Utils.cpp  Utils.hpp  audio_parsers.c  bezier.c  decode_audio_file.c  dict.c  display_hit_object.c  encode_audio.c  encode_frame.c  encode_video.c  frame_buffer.c  get_slider_points.c  globals.c  libav.cpp  libav.hpp  load_skin.c  main.c  main.cpp  perfect_circle.c  perfect_line.c  replay_player.c  sound.c  utils.c  version.hpp  wav_parser.c
src/Controller/: Controller.hpp  ReplayController.cpp  ReplayController.hpp
src/HitObjects/: HitCircle.cpp  HitCircle.hpp  HitObject.cpp  HitObject.hpp  HitObjectFactory.cpp  HitObjectFactory.hpp  Slider.cpp  Slider.hpp  Spinner.cpp  Spinner.hpp
src/Rendering/: LibAvRenderer.cpp  LibAvRenderer.hpp  RenderTarget.cpp  RenderTarget.hpp  SfmlWindowRenderTarget.cpp  SfmlWindowRenderTarget.hpp
src/Sound/: LibAvSoundManager.cpp  LibAvSoundManager.hpp  SfmlSoundManager.cpp  SfmlSoundManager.hpp  SoundManager.cpp  SoundManager.hpp
